Adding RestApiClient and Api Urls.

--- a/Restly/Restly.Core/Restly.Core.csproj
+++ b/Restly/Restly.Core/Restly.Core.csproj
@@ -6,10 +6,15 @@
 
   <ItemGroup>
     <PackageReference Include="MvvmCross" Version="7.1.2" />
+    <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\" />
     <Folder Include="Models\" />
     <Folder Include="Services\" />
+    <Folder Include="Services\Abstractions\" />
+    <Folder Include="Services\Implementations\" />
+    <Folder Include="Exceptions\" />
   </ItemGroup>
 </Project>
