--- a/Restly/Restly.Core/Restly.Core.csproj
+++ b/Restly/Restly.Core/Restly.Core.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="MvvmCross" Version="7.1.2" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Xamarin.Essentials.Interfaces" Version="1.6.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\" />
